# beancount_import_builder

./: Makefile  README.md  pyproject.toml  t2.py
.github/workflows/: ci.yml
beancount_one_importer/: __init__.py  bean_types.py  codec.py
tests/: test_bean_types.py  test_importer.py
