[tool.poetry]
name = "beancount_one_importer"
version = "0.1.0"
description = "The one beancount importer to rule them all"
authors = ["Vishesh Handa <me@vhanda.in>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "beancount_one_importer"}]

[tool.poetry.dependencies]
python = "^3.11"
beancount = "^2.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
